--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Aliosh Romano Pimenta",
   "license": "ISC",
   "devDependencies": {
+    "@types/jest": "^27.0.2",
     "@types/node": "^16.11.4",
     "eslint": "^7.32.0",
     "eslint-config-standard-with-typescript": "^21.0.1",
@@ -20,7 +21,9 @@
     "eslint-plugin-standard": "^5.0.0",
     "git-commit-msg-linter": "^3.2.8",
     "husky": "^4.3.8",
+    "jest": "^27.3.1",
     "lint-staged": "^11.2.4",
+    "ts-jest": "^27.0.7",
     "typescript": "^4.4.4"
   }
 }
