--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "husky": "^4.3.8",
     "jest": "^27.3.1",
     "lint-staged": "^11.2.4",
+    "prettier": "^2.4.1",
     "ts-jest": "^27.0.7",
     "typescript": "^4.4.4"
   }
