--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "webpack-dev-server --open"
   },
   "keywords": [],
   "author": "Aliosh Romano Pimenta",
@@ -14,6 +14,8 @@
     "@types/node": "^16.11.4",
     "@types/react": "^17.0.32",
     "@types/react-dom": "^17.0.10",
+    "clean-webpack-plugin": "^4.0.0",
+    "css-loader": "^6.4.0",
     "eslint": "^7.32.0",
     "eslint-config-standard-with-typescript": "^21.0.1",
     "eslint-plugin-import": "^2.25.2",
@@ -23,10 +25,15 @@
     "eslint-plugin-standard": "^5.0.0",
     "git-commit-msg-linter": "^3.2.8",
     "husky": "^4.3.8",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^27.3.1",
     "lint-staged": "^11.2.4",
+    "node-sass": "^6.0.1",
     "prettier": "^2.4.1",
+    "sass-loader": "^12.2.0",
+    "style-loader": "^3.3.1",
     "ts-jest": "^27.0.7",
+    "ts-loader": "^9.2.6",
     "typescript": "^4.4.4",
     "webpack": "^5.59.1",
     "webpack-cli": "^4.9.1",
