--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/node": "^16.11.4",
     "@types/react": "^17.0.32",
     "@types/react-dom": "^17.0.10",
+    "@types/react-router-dom": "^5.3.1",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.4.0",
     "eslint": "^7.32.0",
@@ -41,6 +42,7 @@
   },
   "dependencies": {
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^5.3.0"
   }
 }
