--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "Aliosh Romano Pimenta",
   "license": "ISC",
   "devDependencies": {
+    "@testing-library/react": "^12.1.2",
     "@types/jest": "^27.0.2",
     "@types/node": "^16.11.4",
     "@types/react": "^17.0.32",
