--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "husky": "^4.3.8",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.3.1",
+    "jest-localstorage-mock": "^2.4.18",
     "lint-staged": "^11.2.4",
     "node-sass": "^6.0.1",
     "prettier": "^2.4.1",
