--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dragon-lair",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -23,6 +23,7 @@
     "@types/react": "^17.0.32",
     "@types/react-dom": "^17.0.10",
     "@types/react-router-dom": "^5.3.1",
+    "@typescript-eslint/eslint-plugin": "^5.2.0",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.4.0",
     "eslint": "^7.32.0",
