--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "webpack-dev-server": "^4.3.1"
   },
   "dependencies": {
+    "axios": "^0.24.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0"
