--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "test:unit": "npm test -- --watch -c jest-unit-config.js",
     "test:integration": "npm test -- --watch -c jest-integration-config.js",
     "test:staged": "npm test -- --findRelatedTests",
-    "test:ci": "npm test -- --coverage --no-cache"
+    "test:ci": "npm test -- --coverage --no-cache",
+    "test:coveralls": "npm run test:ci && coveralls < coverage/lcov.info"
   },
   "keywords": [],
   "author": "Aliosh Romano Pimenta",
